--- a/templates/signup.html
+++ b/templates/signup.html
@@ -11,24 +11,49 @@
         <form action="/signup" method="POST">
             <input type="text" name="username" placeholder="Имя пользователя"
                    class="{% if error_username %}error{% endif %}" value="{{ request.form.username }}">
-            <input type="password" name="password" placeholder="Пароль"
-                   class="{% if error_password %}error{% endif %}">
-            <input type="password" name="confirm_password" placeholder="Подтвердите пароль"
-                   class="{% if error_confirm_password %}error{% endif %}">
+            <div class="input-wrapper">
+                <input type="password" name="password" id="password" placeholder="Пароль"
+                       class="{% if error_password %}error{% endif %}">
+                <span class="eye-icon" onclick="togglePasswordVisibility('password')">◉</span> <!-- Иконка пароля -->
+            </div>
+            <div class="input-wrapper">
+                <input type="password" name="confirm_password" id="confirm_password" placeholder="Подтвердите пароль"
+                       class="{% if error_confirm_password %}error{% endif %}">
+                <span class="eye-icon" onclick="togglePasswordVisibility('confirm_password')">◉</span> <!-- Иконка подтверждения пароля -->
+            </div>
             <input type="email" name="email" placeholder="Email"
                    class="{% if error_email %}error{% endif %}" value="{{ request.form.email }}">
             <button type="submit" class="btn">Зарегистрироваться</button>
         </form>
+
+        <form action="/login" method="GET">
+            <button type="submit" class="btn">Войти</button>
+        </form>
+
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
                 <ul>
                     {% for category, message in messages %}
-                        <li style="color: red; font-weight: bold;">{{ message }}</li>
+                        <li style="color: red; font-weight: bold; text-align: center;">{{ message }}</li>
                     {% endfor %}
                 </ul>
             {% endif %}
         {% endwith %}
-        <a href="/login">Уже зарегистрированы? Войдите</a>
     </div>
+
+    <script>
+        function togglePasswordVisibility(id) {
+            var passwordField = document.getElementById(id);
+            var eyeIcon = document.querySelector(`#${id} + .eye-icon`);
+
+            if (passwordField.type === "password") {
+                passwordField.type = "text";
+                eyeIcon.textContent = "◎";
+            } else {
+                passwordField.type = "password";
+                eyeIcon.textContent = "◉";
+            }
+        }
+    </script>
 </body>
 </html>
