--- a/templates/tic_tac_toe_join_game.html
+++ b/templates/tic_tac_toe_join_game.html
@@ -2,14 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Присоединение к игре</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>Присоединение к игре</h1>
-    <form method="POST">
-        <label for="game_code">Введите код игры:</label>
-        <input type="text" id="game_code" name="game_code" required>
-        <button type="submit">Присоединиться</button>
-    </form>
+    <div class="container1">
+        <h1>Присоединение к игре</h1>
+        <form method="POST">
+            <label for="game_code">Введите код игры:</label>
+            <input type="text" id="game_code" name="game_code" required>
+            <button type="submit">Присоединиться</button>
+        </form>
+    </div>
 </body>
 </html>
